# Rin-Exceptions

./: .gitignore  README.md  pyproject.toml
src/rin_exceptions/: __init__.py  main.py
